--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,124 +1,6 @@
 resources:
-  - url: /community_plugin/lovelace-card-tools/card-tools.js
-    type: js
-  - url: https://unpkg.com/moment@2.22.2/moment.js
-    type: js
-  # - url: https://fonts.googleapis.com/css?family=Roboto+Condensed
-  #   type: css
-  - type: css
-    url: https://fonts.googleapis.com/css?family=Open+Sans&display=swap
-  - url: https://cdn.jsdelivr.net/gh/bramkragten/custom-ui@master/swipe-card/swipe-card.min.js
-    type: module
-  # - url: https://cdn.jsdelivr.net/gh/bramkragten/custom-ui@master/weather-card/weather-card.min.js
-  #   type: module
-  - url: /community_plugin/weather-card/weather-card.js
-    type: module
-  - type: module
-    url: /local/floorplan/floorplan-card.js?v=1.1.14
+  !include lovelace/resources/resources.yaml
 
-  - url: /local/custom-lovelace/camera-card.js
-    type: module
-  - url: /community_plugin/lovelace-home-feed-card/home-feed-card.js
-    type: js
-  - url: /local/custom-lovelace/alarm_control_panel-card.js
-    type: js
-  - url: /community_plugin/atomic_calendar/atomic_calendar.js
-    type: module
-  - url: /community_plugin/lovelace-auto-entities/auto-entities.js
-    type: js
-  - url: /community_plugin/bignumber-card/bignumber-card.js
-    type: js
-  - url: /local/custom-lovelace/browser-commander.js?v.1
-    type: js
-  - url: /community_plugin/button-card/button-card.js
-    type: module
-  - url: /community_plugin/button-entity-row/button-entity-row.js
-    type: js
-  - url: /community_plugin/lovelace-card-mod/card-mod.js
-    type: module
-  # - url: /local/custom-lovelace/card-modder.js
-  #   type: js
-  - url: /community_plugin/compact-custom-header/compact-custom-header.js?v.1
-    type: module
-
-  - url: /local/custom-lovelace/dummy-entity-row.js
-    type: js
-  - url: /local/custom-lovelace/entity-attributes-card.js
-    type: js
-  - url: /community_plugin/lovelace-flower-card/flower-card.js
-    type: module
-  - url: /community_plugin/lovelace-fold-entity-row/fold-entity-row.js
-    type: js
-  - url: /local/custom-lovelace/gap-card.js
-    type: js
-  - url: /community_plugin/krisinfo-card/krisinfo-card.js
-    type: js
-  - url: /community_plugin/lovelace-layout-card/layout-card.js
-    type: js
-  - url: /community_plugin/mini-graph-card/mini-graph-card.js
-    type: module
-  - url: /community_plugin/mini-media-player/mini-media-player.js
-    type: module
-  - url: /community_plugin/lovelace-multiple-entity-row/multiple-entity-row.js
-    type: js
-  # - url: /local/custom-lovelace/plan-coordinates.js
-  #   type: js
-  - url: /local/custom-lovelace/pollenkoll-card.js
-    type: js
-  - url: /community_plugin/lovelace-popup-card/popup-card.js
-    type: js
-  - url: /community_plugin/secondaryinfo-entity-row/secondaryinfo-entity-row.js
-    type: js
-  - url: /community_plugin/simple-weather-card/simple-weather-card.js
-    type: module
-  - url: /local/custom-lovelace/hasl-comb-card.js
-    type: js
-  - url: /community_plugin/lovelace-slider-entity-row/slider-entity-row.js
-    type: js
-  - url: /local/custom-lovelace/simple-thermostat.js?v=1
-    type: module
-  # - url: /local/custom-lovelace/slideshow-card.js
-  #   type: js 
-  - url: /local/custom-lovelace/state-attribute-element.js
-    type: js
-  # - url: /local/custom-lovelace/state-element.js
-  #   type: js
-  - url: /community_plugin/lovelace-state-switch/state-switch.js
-    type: js
-  - url: /local/custom-lovelace/surveillance-card.js
-    type: module
-  - url: /local/custom-lovelace/text-element.js
-    type: js
-  - url: /community_plugin/lovelace-toggle-lock-entity-row/toggle-lock-entity-row.js
-    type: js
-  - url: /local/custom-lovelace/tracker-card.js
-    type: js
-  - url: /community_plugin/upcoming-media-card/upcoming-media-card.js
-    type: js
-  - url: /community_plugin/lovelace-markdown-mod/markdown-mod.js
-    type: module
-  # - url: /local/custom-lovelace/useful-markdown-card.js
-  #   type: js
-  # - url: /local/custom-lovelace/username-element.js
-  #   type: js
-  - url: /community_plugin/vertical-stack-in-card/vertical-stack-in-card.js
-    type: js
-      
-  - url: /local/custom-lovelace/live-camera-card.js?v.0.0.3
-    type: module
-  - url: /local/custom-lovelace/grocy-chores-card.js?v.0.0.1
-    type: js
-  - url: /community_plugin/lovelace-theme-maker/theme-maker.js
-    type: js
-  - url: /local/custom-lovelace/nest-layout-card.js
-    type: js
-  - url: /community_plugin/decluttering-card/decluttering-card.js
-    type: module
-  - url: /local/custom-lovelace/smhi-forecast-card.js
-    type: module
-  - url: /community_plugin/lovelace-xiaomi-vacuum-card/xiaomi-vacuum-card.js
-    type: js
-    
 cch:
   disable: false
   header: true
@@ -139,127 +21,13 @@ cch:
         kiosk_mode: true
 
 button_card_templates:
-  camera_button:
-    show_state: false
-    show_icon: true
-    show_name: false
-    tap_action:
-      action: toggle
-    style: |
-      ha-card {
-        # font-family: 'Open Sans', sans-serif;
-        padding-top: 10px !important;
-        background-color: rgba(0, 0, 0, 0);
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
-      } 
-  nest_picture_button:
-    show_state: true
-    show_icon: true
-    show_name: false
-    show_entity_picture: true
-    tap_action:
-      action: more-info
-    style: |
-      ha-card {
-        font-family: 'Open Sans', sans-serif;
-        padding-top: 15px !important;
-        background-color: rgba(0, 0, 0, 0);
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
-      }
-      img {
-        width: 100% !important;
-      }
-      #img-cell {
-        background-color: #F5F5F5;
-        border-radius: 50px;
-        height: 50px !important;
-        width: 50px !important;
-      }
-      #state {
-        padding-top: 5px;
-      }
+  !include lovelace/button_card_templates/button_card_templates.yaml
 
 decluttering_templates:
-  nest_button:
-    default:
-      - show_state: true
-      - show_name: false
-    card:
-      type: custom:button-card
-      entity: '[[entity]]'
-      show_last_changed: true
-      show_state: '[[show_state]]'
-      show_icon: true
-      show_name: '[[show_name]]'
-      name: '[[name]]'
-      state: '[[state]]'
-      tap_action:
-        action: more-info
-      style: |
-        ha-card {
-          font-family: 'Open Sans', sans-serif;
-          padding-top: 15px !important;
-          background-color: rgba(0, 0, 0, 0);
-          -webkit-box-shadow: none;
-          -moz-box-shadow: none;
-          box-shadow: none;
-        }
-        ha-icon {
-          width: 60% !important;
-        }
-        img {
-          width: 100%;
-        }
-        #img-cell {
-          background-color: #F5F5F5;
-          border-radius: 50px;
-          height: 50px !important;
-          width: 50px !important;
-        }
-        #state {
-          padding-top: 5px;
-        }
-        #label {
-          font-size: 70%;
-        }
-  nest_picture_button:
-    card:
-      type: custom:button-card
-      entity: '[[entity]]'
-      show_state: true
-      show_icon: true
-      show_name: false
-      show_entity_picture: true
-      entity_picture: '[[entity_picture]]'
-      tap_action:
-        action: more-info
-      style: |
-        ha-card {
-          font-family: 'Open Sans', sans-serif;
-          padding-top: 15px !important;
-          background-color: rgba(0, 0, 0, 0);
-          -webkit-box-shadow: none;
-          -moz-box-shadow: none;
-          box-shadow: none;
-        }
-        img {
-          width: 100% !important;
-        }
-        #img-cell {
-          background-color: #F5F5F5;
-          border-radius: 50px;
-          height: 50px !important;
-          width: 50px !important;
-        }
-        #state {
-          padding-top: 5px;
-        }
+  !include lovelace/decluttering_templates/decluttering_templates.yaml
 
 title: Home
+background: var(--background)
 views:
   - !include lovelace/00_home_view.yaml
   - !include lovelace/10_home_info_view.yaml
@@ -271,3 +39,6 @@ views:
   - !include lovelace/80_automations_view.yaml
   - !include lovelace/99_settings_view.yaml
   - !include lovelace/102_nest_dashboard.yaml
+  - !include lovelace/01_homekit_view.yaml
+
+  - !include lovelace/media.yaml
